--- a/thanks.html
+++ b/thanks.html
@@ -17,6 +17,7 @@
             --white-glass: rgba(255, 255, 255, 0.98);
             --border-light: rgba(27, 77, 62, 0.15);
             --shadow-premium: 0 15px 45px rgba(0,0,0,0.08);
+            --whatsapp-green: #25D366;
         }
 
         * { 
@@ -28,14 +29,11 @@
 
         body {
             font-family: 'Rubik', sans-serif;
-            background-color: var(--bg-cream);
+            background-color: var(--bg-cream); /* Solid background as requested */
             color: var(--text-dark);
             font-size: 20px; 
             line-height: 1.7;
             overflow-x: hidden;
-            background-image: radial-gradient(var(--deep-green) 0.5px, transparent 0.5px);
-            background-size: 50px 50px;
-            background-attachment: fixed;
         }
 
         .container { 
@@ -44,7 +42,12 @@
             padding: 20px; 
         }
 
-        .top-status { text-align: center; padding: 20px 0 30px; animation: fadeIn 1s ease; }
+        /* Top Status Section */
+        .top-status { 
+            text-align: center; 
+            padding: 20px 0 10px; 
+            animation: fadeIn 1s ease;
+        }
 
         .success-label {
             display: inline-flex;
@@ -59,15 +62,38 @@
             border: 2px solid var(--border-light);
             gap: 12px;
             max-width: 100%;
+            margin-bottom: 15px;
         }
 
+        /* Subtle Social Link */
+        .social-sub-offer {
+            font-size: 0.95rem;
+            color: var(--text-dark);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 8px;
+            opacity: 0.9;
+        }
+
+        .social-sub-offer a {
+            color: var(--whatsapp-green);
+            font-weight: 700;
+            text-decoration: none;
+            border-bottom: 1px solid var(--whatsapp-green);
+            transition: opacity 0.3s;
+        }
+        
+        .social-sub-offer a:hover { opacity: 0.7; }
+
+        /* Early Upgrade Box */
         .early-upgrade-box {
             background: #fff;
             border: 3px solid var(--luxury-gold);
             border-radius: 30px;
             padding: 30px 20px;
             text-align: center;
-            margin-bottom: 40px;
+            margin: 30px 0 40px;
             box-shadow: 0 20px 40px rgba(212, 175, 55, 0.12);
         }
 
@@ -101,10 +127,27 @@
             border: none;
         }
 
-        h1 { font-size: clamp(2rem, 7vw, 3.2rem); font-weight: 900; text-align: center; line-height: 1.25; margin-bottom: 20px; text-wrap: balance; }
+        h1 { 
+            font-size: clamp(2rem, 7vw, 3.2rem); 
+            font-weight: 900; 
+            text-align: center; 
+            line-height: 1.25; 
+            margin-bottom: 20px; 
+            text-wrap: balance; 
+        }
 
-        .bridge-text { text-align: center; font-size: 1.35rem; margin-bottom: 50px; max-width: 90%; margin-left: auto; margin-right: auto; line-height: 1.7; text-wrap: balance; }
+        .bridge-text { 
+            text-align: center; 
+            font-size: 1.35rem; 
+            margin-bottom: 50px; 
+            max-width: 90%; 
+            margin-left: auto; 
+            margin-right: auto; 
+            line-height: 1.7; 
+            text-wrap: balance; 
+        }
 
+        /* Gold Line Effect */
         .gold-line { position: relative; display: inline-block; font-weight: 700; }
         .gold-line::after {
             content: "";
@@ -119,29 +162,117 @@
         }
         .gold-line.active::after { width: 100%; }
 
+        /* Images */
         .book-container { perspective: 2500px; margin: 50px 0; display: flex; justify-content: center; }
-        .book-img { width: 320px; height: auto; border-radius: 5px 15px 15px 5px; box-shadow: 25px 35px 60px rgba(0,0,0,0.18); transform: rotateY(15deg); }
+        .book-img { 
+            width: 320px; 
+            height: auto; 
+            border-radius: 5px 15px 15px 5px; 
+            box-shadow: 25px 35px 60px rgba(0,0,0,0.18); 
+            transform: rotateY(15deg); 
+            transition: transform 0.5s ease;
+        }
 
-        .glass-card { background: var(--white-glass); border-radius: 40px; padding: 60px 35px; box-shadow: var(--shadow-premium); border: 1px solid #fff; margin-top: -20px; position: relative; z-index: 10; }
+        .glass-card { 
+            background: var(--white-glass); 
+            border-radius: 40px; 
+            padding: 60px 35px; 
+            box-shadow: var(--shadow-premium); 
+            border: 1px solid #fff; 
+            margin-top: -20px; 
+            position: relative; 
+            z-index: 10; 
+        }
 
-        .features-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 40px; margin: 40px 0; }
+        .features-grid { 
+            display: grid; 
+            grid-template-columns: 1fr 1fr; 
+            gap: 40px; 
+            margin: 40px 0; 
+        }
+
         .feature-box { display: flex; flex-direction: column; gap: 15px; }
-        .feature-icon-box { width: 60px; height: 60px; background: #FDF9F0; border-radius: 20px; display: flex; align-items: center; justify-content: center; color: var(--luxury-gold); border: 1px solid rgba(212, 175, 55, 0.2); }
+
+        .feature-icon-box { 
+            width: 60px; 
+            height: 60px; 
+            background: #FDF9F0; 
+            border-radius: 20px; 
+            display: flex; 
+            align-items: center; 
+            justify-content: center; 
+            color: var(--luxury-gold); 
+            border: 1px solid rgba(212, 175, 55, 0.2); 
+        }
+
         .feature-icon-box svg { width: 32px; height: 32px; fill: none; stroke: currentColor; stroke-width: 2.5; }
+
         .feature-info h3 { font-size: 1.5rem; font-weight: 900; margin-bottom: 10px; line-height: 1.3; }
         .feature-info p { font-size: 1.15rem; line-height: 1.6; opacity: 1; }
 
         .testimonial-section { text-align: center; margin: 60px 0 20px; padding: 0 10px; }
         .testimonial-title { font-size: 1.6rem; font-weight: 800; margin-bottom: 25px; color: var(--deep-green); text-wrap: balance; }
-        .testimonial-card { background: #fff; padding: 12px; border-radius: 20px; box-shadow: 0 15px 40px rgba(0,0,0,0.06); max-width: 480px; margin: 0 auto; border: 1px solid var(--border-light); transform: rotate(-1deg); }
+        .testimonial-card { 
+            background: #fff; 
+            padding: 12px; 
+            border-radius: 20px; 
+            box-shadow: 0 15px 40px rgba(0,0,0,0.06); 
+            max-width: 480px; 
+            margin: 0 auto; 
+            border: 1px solid var(--border-light); 
+            transform: rotate(-1deg); 
+        }
         .testimonial-img { width: 100%; height: auto; border-radius: 10px; display: block; }
 
-        .pricing-box { background: #fff; border-radius: 40px; padding: 50px 30px; text-align: center; border: 3px solid var(--border-light); margin-top: 40px; box-shadow: 0 10px 30px rgba(0,0,0,0.02); }
-        .price-badge { background: #FDF9EC; color: var(--luxury-gold); padding: 12px 30px; border-radius: 50px; font-size: 1.2rem; font-weight: 800; margin-bottom: 25px; display: inline-block; border: 1px solid rgba(212, 175, 55, 0.3); }
-        .price-display { font-size: 6.5rem; font-weight: 900; line-height: 1; margin-bottom: 40px; display: flex; justify-content: center; align-items: flex-start; }
+        /* Pricing */
+        .pricing-box { 
+            background: #fff; 
+            border-radius: 40px; 
+            padding: 50px 30px; 
+            text-align: center; 
+            border: 3px solid var(--border-light); 
+            margin-top: 40px; 
+            box-shadow: 0 10px 30px rgba(0,0,0,0.02); 
+        }
+
+        .price-badge { 
+            background: #FDF9EC; 
+            color: var(--luxury-gold); 
+            padding: 12px 30px; 
+            border-radius: 50px; 
+            font-size: 1.2rem; 
+            font-weight: 800; 
+            margin-bottom: 25px; 
+            display: inline-block; 
+            border: 1px solid rgba(212, 175, 55, 0.3); 
+        }
+
+        .price-display { 
+            font-size: 6.5rem; 
+            font-weight: 900; 
+            line-height: 1; 
+            margin-bottom: 40px; 
+            display: flex; 
+            justify-content: center; 
+            align-items: flex-start; 
+        }
         .currency { font-size: 2.5rem; margin-top: 20px; margin-right: 15px; }
 
-        .cta-btn { background: var(--gold-gradient); color: #fff !important; text-decoration: none; padding: 25px 40px; border-radius: 22px; font-size: 1.7rem; font-weight: 900; display: block; box-shadow: 0 15px 35px rgba(212, 175, 55, 0.4); width: 100%; line-height: 1.4; text-wrap: balance; }
+        .cta-btn { 
+            background: var(--gold-gradient); 
+            color: #fff !important; 
+            text-decoration: none; 
+            padding: 25px 40px; 
+            border-radius: 22px; 
+            font-size: 1.7rem; 
+            font-weight: 900; 
+            display: block; 
+            box-shadow: 0 15px 35px rgba(212, 175, 55, 0.4); 
+            transition: transform 0.2s ease; 
+            width: 100%; 
+            line-height: 1.4; 
+            text-wrap: balance; 
+        }
 
         .trust-section { margin-top: 35px; display: flex; justify-content: center; gap: 25px; flex-wrap: wrap; }
         .trust-item { display: flex; align-items: center; gap: 8px; font-size: 1rem; font-weight: 600; }
@@ -157,8 +288,9 @@
             .price-display { font-size: 5.5rem; }
             .glass-card { padding: 45px 20px; }
             .book-img { width: 270px; }
-            .cta-btn { font-size: 1.5rem; padding: 22px; }
+            .cta-btn { font-size: 1.5rem; padding: 20px; }
             .trust-section { flex-direction: column; align-items: center; gap: 12px; }
+            .social-sub-offer { flex-direction: column; gap: 5px; }
         }
 
         @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
@@ -171,6 +303,13 @@
         <div class="success-label">
             <svg width="24" height="24" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M5 13l4 4L19 7"></path></svg>
             חוברת המתוקים כבר מחכה לך במייל!
+        </div>
+        <!-- Subtle WhatsApp status link with updated URL -->
+        <div class="social-sub-offer">
+            <span>רוצה לקבל ממני השראה וטיפים נוספים ישירות לנייד?</span>
+            <a href="https://wa.me/504207702?text=היי+רבקה+אשמח+לצפות+בסטטוס+שלך+השם+שלי+הוא" target="_blank">
+                לחצי כאן ועקבי אחרי בסטטוס שלי >>
+            </a>
         </div>
     </header>
 
@@ -283,12 +422,12 @@
         const statusText = document.getElementById('offer-status');
         const actionLinks = document.querySelectorAll('.main-link-element');
 
-        let targetTime = localStorage.getItem('oto_timer_v13_sweets');
+        let targetTime = localStorage.getItem('oto_timer_v14_sweets');
         const currentTime = Math.floor(Date.now() / 1000);
 
         if (!targetTime || (currentTime > targetTime && (currentTime - targetTime) > 7200)) { 
             targetTime = currentTime + DURATION_SECONDS;
-            localStorage.setItem('oto_timer_v13_sweets', targetTime);
+            localStorage.setItem('oto_timer_v14_sweets', targetTime);
         }
 
         const countdownInterval = setInterval(() => {
@@ -322,16 +461,21 @@
     function initAnimations() {
         const observer = new IntersectionObserver((entries) => {
             entries.forEach(entry => {
-                if (entry.isIntersecting) entry.target.classList.add('active');
+                if (entry.isIntersecting) {
+                    entry.target.classList.add('active');
+                }
             });
         }, { threshold: 0.8 });
 
-        document.querySelectorAll('.gold-line').forEach(line => { observer.observe(line); });
+        document.querySelectorAll('.gold-line').forEach(line => {
+            observer.observe(line);
+        });
     }
 
     document.querySelectorAll('a[href^="#"]').forEach(link => {
         link.addEventListener('click', function(e) {
             if (this.classList.contains('main-link-element') && this.getAttribute('href') !== '#pricing') return;
+            if (this.href.includes('wa.me')) return; 
             e.preventDefault();
             const target = document.querySelector(this.getAttribute('href'));
             if (target) target.scrollIntoView({ behavior: 'smooth', block: 'start' });
